<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">Rodalies</string>
    <string name="action_settings">Configuració</string>
    <string name="title_activity_page1">Page1Activity</string>
    <string name="title_activity_page2">Page2Activity</string>
    <string name="menu_page1">Page1</string>
    <string name="menu_page2">Page2</string>
    <string name="title_activity_guardar_preferencias">GuardarPreferencias</string>
    <string name="selecLinea1">Selecciona la línia principal:</string>
    <string name="selecLineaS">Selecciona les línies secundaries:</string>
    <string name="selecLineaS2">Seleccioni la línia o les línies que vol consultar:</string>
    <string name="r1">Línia R1</string>
    <string name="r2">Línia R2</string>
    <string name="r2n">Línia R2 Nord</string>
    <string name="r2s">Línia R2 Sud </string>
    <string name="r3">Línia R3</string>
    <string name="r4">Línia R4</string>
    <string name="r5">Línia R5</string>
    <string name="r6">Línia R6</string>
    <string name="r7">Línia R7</string>
    <string name="r8">Línia R8</string>
    <string name="r9">Línia R9</string>
    <string name="r10">Línia R10</string>
    <string name="r11">Línia R11</string>
    <string name="r12">Línia R12</string>
    <string name="r13">Línia R13</string>
    <string name="r14">Línia R14</string>
    <string name="r15">Línia R15</string>
    <string name="r16">Línia R16</string>
    <string name="guardar">Guarda</string>
    <string name="normalitat">Normalitat al servei</string>
    <string name="obtenint_dades">Obtenint dades...</string>
    <string name="info_oficial">Informació oficial via GENCAT</string>
    <string name="info_twitter">Informació via Twitter</string>
    <string name="carregant">Obtenint dades...</string>
    <string name="avui">Avui</string>
    <string name="ahir">Ahir</string>
    <string name="twittear">Piular</string>
    <string name="actualizar">Actualitza</string>
    <string name="acerca_de">Quant a</string>
    <string name="autores1">Aplicació desenvolupada per:</string>
    <string name="autores2">Albert Pagès i Jesús Escribano</string>
    <string name="fuente1">Font de les dades oficials:</string>
    <string name="fuente2">http://dadesobertes.gencat.cat</string>
    <string name="contacto1">Contacta amb nosaltres:</string>
    <string name="contacto2">Running Dogs Studio runningdogsstudio@gmail.com</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="generalitat">Generalitat de Catalunya</string>
    <string name="r1_p">Molins de rei - Maçanet - Mataró</string>
    <string name="r2_p">Castelldefels - Granollers Centre</string>
    <string name="r2n_p">Aeroport - Maçanet - Granollers centre</string>
    <string name="r2s_p">Sant Vicenç de C. - Vilanova - BCN Est. França </string>
    <string name="r3_p">Hospitalet de LL. - Puigcerdà - Vic</string>
    <string name="r4_p">Sant Vicentç de C. - Manresa - Vilafranca del P.</string>
    <string name="r7_p">BCN Sant Andreu Arenal - Cerdanyola Uni.</string>
    <string name="r8_p">Martorell - Granollers Centre - Cerdanyola Uni.</string>
    <string name="r11_p">BCN Sants - Portbou - Girona</string>
    <string name="r12_p">Hospitalet de LL. - Lleida - Manresa</string>
    <string name="r13_p">BCN Est. França - Lleida - Valls</string>
    <string name="r14_p">BCN Est. França - Lleida - Tarragona y Reus</string>
    <string name="r15_p">BCN Est. França - Riba-roja Ebre - Tarragona y Reus</string>
    <string name="r16_p">BCN Est. França - Tortosa/Ulldecona - Tarragona</string>
    <string name="title_activity_configurador_notificaciones" translatable="false">ConfiguradorNotificaciones</string>
    <string name="configura_notificaciones">Configura alertes</string>
    <string name="title_activity_nueva_alarma_notificacion" translatable="false">NuevaAlarmaNotificacion</string>
    <string name="alertas">Alertes</string>
    <string name="nueva_alerta">Nova alerta</string>
    <string name="lunes">DLL</string>
    <string name="martes">DMT</string>
    <string name="miercoles">DIM</string>
    <string name="jueves">DIJ</string>
    <string name="viernes">DIV</string>
    <string name="sabado">DIS</string>
    <string name="domingo">DIU</string>
    <string name="title_activity_lista_notificaciones" translatable="false">ListaNotificaciones</string>
    <string name="aceptar">Accepta</string>
    <string name="seleccionar_un_dia">Ha de seleccionar com a mínim un dia</string>
    <string name="max_pref">No pots tenir més de 3 alarmes!</string>
    <string name="eliminar_alerta">Eliminar alerta?</string>
    <string name="no">No</string>
    <string name="si">Sí</string>
    <string name="title_activity_horaris">Horaris</string>
    <string name="estacion_origen">Estació origen:</string>
    <string name="estacion_destino">Estació destí:</string>
    <string name="dia">Día:</string>
    <string name="mes">Mes:</string>
    <string name="anyo">Año:</string>
    <string name="consultaHorarios">Consultar horaris</string>
    <string name="horarios">Horaris</string>
    <string name="estacionesIguales">Les estacions d\'origen i destinació no poden ser iguals</string>
    <string name="title_activity_consulta_horarios">Horaris</string>
    <string name="station1_salida">sortida</string>
    <string name="station2_llegada">arrivada</string>
    <string name="tiempo">temps</string>
    <string name="linea_salida">linea</string>
    <string name="origen_desti">Estació origen - Estació desti</string>
    <string name="consultaTornada">Viatge de tornada</string>
    <string name="errorRenfe">La web de Renfe no respon</string>
    <string name="enero">Gener</string>
    <string name="febrero">Febrer</string>
    <string name="marzo">Març</string>
    <string name="abril">Abril</string>
    <string name="mayo">Maig</string>
    <string name="junio">Juny</string>
    <string name="julio">Juliol</string>
    <string name="agosto">Agost</string>
    <string name="septiembre">Setembre</string>
    <string name="octubre">Octubre</string>
    <string name="noviembre">Novembre</string>
    <string name="diciembre">Desembre</string>
    <string name="cargando">Carregant...</string>
    <string name="crear_alarma">Afegeix alertes per a ser notificat en cas de problemes en qualsevol de les teves líneas. Prem el botó + per afegir una alarma.</string>

</resources>