<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background = "#ffffffff"
android:orientation = "vertical"
>

<TextView
    android:id="@+id/info_stations"
    android:text="@string/origen_desti"
    android:textSize="18sp"
    android:textStyle="bold"
    android:textColor = "#ff000000"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10px"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:gravity="center_horizontal"

    />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background = "#ffffffff"
    android:orientation = "horizontal"
    >

    <TextView
        android:id="@+id/info_date"
        android:text="30/01/2010"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor = "#ff000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingLeft="20dp"
        android:layout_marginTop="5px" />

    <Button
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/consultaTornada" />

</LinearLayout>

    <TextView
    android:id="@+id/info_transbordo"
    android:textSize="15sp"
    android:textColor = "#ff000000"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    android:padding="3px" />


<ScrollView
    android:id="@+id/scrollview"
    android:background = "#ffffffff"
    android:orientation="vertical"
    android:layout_marginTop="5px"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >


    <TableLayout
        android:id="@+id/myTableLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"

        >
        <TableRow
            android:background = "#60cfcfdb"
            >

        <TextView
            android:text="@string/station1_salida"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor = "#ff000000"
            android:padding="5px"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:text="@string/station2_llegada"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor = "#ff000000"
            android:padding="5px"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:text="@string/tiempo"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor = "#ff000000"
            android:padding="5px"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:text="@string/linea_salida"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor = "#ff000000"
            android:padding="5px"
            android:layout_marginLeft="20dp"/>

         </TableRow>


    </TableLayout>

</ScrollView>

</LinearLayout>
