<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GuardarPreferencias" >

    <TextView
        android:id="@+id/selecLinea1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecLinea1" />
    
    <Spinner
         android:id="@+id/Spinner_Lineas1"
         android:layout_marginTop="5dp"
         android:layout_below="@+id/selecLinea1"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:background="@android:color/white"
         android:entries="@array/lineas"></Spinner>
    
    <!-- hueco para la lista de lineas secundarias -->
    <TextView
        android:id="@+id/selecLineaS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Spinner_Lineas1"
        android:text="@string/selecLineaS" 
        android:layout_marginTop="20dp"/>
 
	<ListView 
    	android:id="@+id/list"
    	android:layout_width="fill_parent"
    	android:layout_height="200dp"
 		android:layout_below="@+id/selecLineaS"
 		
    />
      
     <Button
         android:id="@+id/guardar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:onClick="guardar"
         android:text="@string/guardar" />

</RelativeLayout>