<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/info_principal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_oficial"
                        android:layout_marginBottom="10dip"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        />


                    <TextView
                        android:id="@+id/textP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/obtenint_dades"
                        android:maxLines="10"
                        android:scrollbars="vertical"/>

                </LinearLayout>

            </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_twitter"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lista_tuits"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>


</android.support.v4.widget.SwipeRefreshLayout>

